package com.youtube.videotranscodeservice.domain.entities;

public enum DRMType {
    WIDEVINE,
    FAIRPLAY,
    PLAYREADY,
    CLEAR_KEY
}

