package com.youtube.videotranscodeservice.domain.entities;

public enum ThumbnailSize {
    SMALL,
    MEDIUM,
    LARGE
}

